sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/QHSE_Installation_Record_Sheet__c.object-meta.xml
<CustomObject>
    <description>Monitor installation process whether it meets standards.</description>
    <label>QHSE Installation Record Sheet</label>
    <nameField>
        <label>QHSE Installation Record Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QHSE Installations Record Sheet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>