sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Accidents_near_misses_when_installing__c.field-meta.xml
<CustomField>
    <fullName>Accidents_near_misses_when_installing__c</fullName>
    <label>Accidents/ near misses when installing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>