sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/All_parts_structurally_sound__c.field-meta.xml
<CustomField>
    <fullName>All_parts_structurally_sound__c</fullName>
    <label>All parts structurally sound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>