sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Any_Obstacles_Encountered_in_Digging__c.field-meta.xml
<CustomField>
    <fullName>Any_Obstacles_Encountered_in_Digging__c</fullName>
    <label>Any Obstacles Encountered in Digging</label>
    <length>50</length>
    <type>Text</type>
</CustomField>