sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Check_Retaining_Box_protrusion_measures__c.field-meta.xml
<CustomField>
    <fullName>Check_Retaining_Box_protrusion_measures__c</fullName>
    <label>Check Retaining Box protrusion measures</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>