sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Check_toilet_walls_are_symmetrical__c.field-meta.xml
<CustomField>
    <fullName>Check_toilet_walls_are_symmetrical__c</fullName>
    <label>Check toilet walls are symmetrical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>