sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Correct_tile_and_floor_slab_gaps__c.field-meta.xml
<CustomField>
    <fullName>Correct_tile_and_floor_slab_gaps__c</fullName>
    <label>Correct tile and floor slab gaps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>