sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Crew_Lead__c.field-meta.xml
<CustomField>
    <fullName>Crew_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>QHSE Installations Record Sheet</relationshipLabel>
    <relationshipName>QHSE_Installations_Record_Sheet</relationshipName>
    <type>Lookup</type>
</CustomField>