sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Door_hooks_and_user_info_sheet_installed__c.field-meta.xml
<CustomField>
    <fullName>Door_hooks_and_user_info_sheet_installed__c</fullName>
    <label>Door hooks and user info sheet installed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>