sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Feces_Cointainer_placed_and_raised_to_21__c.field-meta.xml
<CustomField>
    <fullName>Feces_Cointainer_placed_and_raised_to_21__c</fullName>
    <label>Feces Cointainer placed and raised to 21</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>