sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Fiber_sheet_nailed_to_roof__c.field-meta.xml
<CustomField>
    <fullName>Fiber_sheet_nailed_to_roof__c</fullName>
    <label>Fiber sheet nailed to roof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>