sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/FLO_rep_present_during_installation__c.field-meta.xml
<CustomField>
    <fullName>FLO_rep_present_during_installation__c</fullName>
    <label>FLO rep present during installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>