sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Floor_Slab_positioned_correctly__c.field-meta.xml
<CustomField>
    <fullName>Floor_Slab_positioned_correctly__c</fullName>
    <label>Floor Slab positioned correctly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>