sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/FLT_color_shades_as_per_shade_kit__c.field-meta.xml
<CustomField>
    <fullName>FLT_color_shades_as_per_shade_kit__c</fullName>
    <label>FLT color shades as per shade kit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>