sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Formwork_equidistant_to_structure_sides__c.field-meta.xml
<CustomField>
    <fullName>Formwork_equidistant_to_structure_sides__c</fullName>
    <label>Formwork equidistant to structure sides</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>