sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Has_all_required_documentation__c.field-meta.xml
<CustomField>
    <fullName>Has_all_required_documentation__c</fullName>
    <label>Has all required documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-conforming</fullName>
            </value>
            <value>
                <fullName>Conforming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>