sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Hazards_encountered_during_site_clean_up__c.field-meta.xml
<CustomField>
    <fullName>Hazards_encountered_during_site_clean_up__c</fullName>
    <label>Hazards encountered during site clean up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>