sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Hinges_placed_at_correct_locations__c.field-meta.xml
<CustomField>
    <fullName>Hinges_placed_at_correct_locations__c</fullName>
    <label>Hinges placed at correct locations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>