sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Landing_is_adequate_to_foot_place__c.field-meta.xml
<CustomField>
    <fullName>Landing_is_adequate_to_foot_place__c</fullName>
    <label>Landing is adequate to foot place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>