sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Lock_well_measured_straight_parallel__c.field-meta.xml
<CustomField>
    <fullName>Lock_well_measured_straight_parallel__c</fullName>
    <label>Lock well measured, straight, parallel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>