sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Logo_llevel_and_at_correct_measurements__c.field-meta.xml
<CustomField>
    <fullName>Logo_llevel_and_at_correct_measurements__c</fullName>
    <label>Logo level and at correct measurements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>