sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/No_vertical_door_gaps_when_door_closed__c.field-meta.xml
<CustomField>
    <fullName>No_vertical_door_gaps_when_door_closed__c</fullName>
    <label>No vertical door gaps when door closed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>