sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Painter__c.field-meta.xml
<CustomField>
    <fullName>Painter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>QHSE Installations Record Sheet (Contact)</relationshipLabel>
    <relationshipName>QHSE_Installations_Record_Sheet2</relationshipName>
    <type>Lookup</type>
</CustomField>