sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Percentage_Score3__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Score3__c</fullName>
    <label>Percentage Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>