sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Roof_kit_fastened_to_bracket_support__c.field-meta.xml
<CustomField>
    <fullName>Roof_kit_fastened_to_bracket_support__c</fullName>
    <label>Roof kit fastened to bracket support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>