sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Site_Alignment_According_to_Site_Map__c.field-meta.xml
<CustomField>
    <fullName>Site_Alignment_According_to_Site_Map__c</fullName>
    <label>Site Alignment According to Site Map</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>