sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <label>Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Up Structure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>