sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Superstructure_surfaces_true_and_level__c.field-meta.xml
<CustomField>
    <fullName>Superstructure_surfaces_true_and_level__c</fullName>
    <label>Superstructure surfaces true and level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>