sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Toilet__c.field-meta.xml
<CustomField>
    <fullName>Toilet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>QHSE Installations Record Sheet</relationshipLabel>
    <relationshipName>QHSE_Installations_Record_Sheet</relationshipName>
    <type>Lookup</type>
</CustomField>