sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Toilet_locked_and_ready_for_launch__c.field-meta.xml
<CustomField>
    <fullName>Toilet_locked_and_ready_for_launch__c</fullName>
    <label>Toilet locked and ready for launch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>