sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Toilet_tagged_with_correct_number__c.field-meta.xml
<CustomField>
    <fullName>Toilet_tagged_with_correct_number__c</fullName>
    <label>Toilet tagged with correct number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>