sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Toilet_Version__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Version__c</fullName>
    <label>Toilet Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V2</fullName>
            </value>
            <value>
                <fullName>V3</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>