sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/User_education_poster_mounted_correctly__c.field-meta.xml
<CustomField>
    <fullName>User_education_poster_mounted_correctly__c</fullName>
    <label>User education poster mounted correctly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>