sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Wall_gap_exceeding_1mm__c.field-meta.xml
<CustomField>
    <fullName>Wall_gap_exceeding_1mm__c</fullName>
    <label>Wall gap exceeding 1mm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>