sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Walls_Erected_and_secured_using_bolts__c.field-meta.xml
<CustomField>
    <fullName>Walls_Erected_and_secured_using_bolts__c</fullName>
    <label>Walls Erected and secured using bolts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>