sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/Weather_during_Installation__c.field-meta.xml
<CustomField>
    <fullName>Weather_during_Installation__c</fullName>
    <label>Weather during Installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunny</fullName>
            </value>
            <value>
                <fullName>Rainy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>