sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/X1_gap_between_door_and_floor__c.field-meta.xml
<CustomField>
    <fullName>X1_gap_between_door_and_floor__c</fullName>
    <label>1 inch gap between door and floor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>