sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/fields/X6_rise_and_11_run_on_steps__c.field-meta.xml
<CustomField>
    <fullName>X6_rise_and_11_run_on_steps__c</fullName>
    <label>6&quot; rise and 11&quot; run on steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>