sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/recordTypes/QHSE_Installation_Record_Sheet.recordType-meta.xml
<RecordType>
    <fullName>QHSE_Installation_Record_Sheet</fullName>
    <active>true</active>
    <label>QHSE Installation Record Sheet</label>
</RecordType>