sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/listViews/QHSE_installation_record_sheet.listView-meta.xml
<ListView>
    <fullName>QHSE_installation_record_sheet</fullName>
    <columns>Toilet__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Toilet_Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Toilet_Version__c</field>
        <operation>equals</operation>
        <value>V3</value>
    </filters>
    <label>QHSE installation record sheet</label>
    <language>en_US</language>
</ListView>