sfSandBoxCode/force-app/main/default/objects/QHSE_Installation_Record_Sheet__c/listViews/V3_Toilets.listView-meta.xml
<ListView>
    <fullName>V3_Toilets</fullName>
    <columns>NAME</columns>
    <columns>Toilet__c</columns>
    <columns>Toilet_Version__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Toilet_Version__c</field>
        <operation>equals</operation>
        <value>V3</value>
    </filters>
    <label>V3 Toilets</label>
    <language>en_US</language>
</ListView>